cambios para setear login y register

--- a/views/home.html
+++ b/views/home.html
@@ -36,6 +36,63 @@
             <li><a href="# ">Ingresá</a></li>
             <li><a href="# ">Mis compras</a></li>
         </ul>
+        </div>
+        </div>
+        <!--Formulario -->
+        <form action="" method="post
+            <div class=" container "> 
+                <div class="container2 ">  
+                <section>
+                 <h5 class="registro ">Creá tu cuenta</h5>
+                </br>
+            </br>
+                 <label for="nombre ">Nombre y Apellido </label>
+                </br>
+            </br>
+                 <input class="datosingresados " type="text " name="Nombre " placeholder="Nombre y Apellido " >
+                </br>
+            </br>
+            <label for="nombre ">Nombre de usuario </label>
+        </br>
+    </br>      
+            <input class="datosingresados " type="text " name="Nombre " placeholder="Nombre de usuario " >
+                </br>
+            </br>
+                  <label>Fecha de nacimiento</label>
+               <select name="mes ">
+          <option value="1 ">Enero</option>
+          <option value="2 ">Febrero</option>
+          <option value="3 ">Marzo</option>
+          <option value="4 ">Abril</option>
+          <option value="5 ">Mayo</option>
+          <option value="6 ">Junio</option>
+           <option value="7 ">Julio</option>
+          <option value="8 ">Agosto</option>
+          <option value="9 ">Septiembre</option>
+          <option value="10 ">Octubre</option>
+           <option value="11 ">Noviembre</option>
+          <option value="12 ">Diciembre</option>
+          </select>
+        </br>
+        </br>
+        <label for="nombre ">Domicilio </label>
+    </br>
+</br>
+          <input class="datosingresados " type="text " name="Nombre " placeholder="Domicilio " >
+                 <h4>Perfil del usuario</h4>
+                 <label> Perfil del usuario </label>
+       <input type="radio " name="usuario " value= Comprar>
+          <input type="radio " name="usuario " value= Vender>                
+                 
+                <section class="login ">
+                    <h5>Ingresá</h5> 
+                     <input class="datosingresados " type="text " name="email " placeholder="Email " >
+                     <input class="datosingresados " type="text " name="contraseña " placeholder="Contraseña ">
+                     <input class="boton " type="submit " name=" " value="Ingresar ">
+                     <p><a href="# ">Olvide mi contraseña</a> </p>
+                   </section>
+            </form>
+    
     </header>
     <main>
         <section>
@@ -68,58 +125,58 @@
                 <p>$23.200</p>
                 <p>5% OFF </p>
                 <p><strong>SmartTv Samsung 43"</strong>
-                </p>
+            </p>
             </article>
-        </section>
-        <section>
-            <h2> <strong>Ofertas</strong></h2>
-            <article id="Cafetera">
-                <img src="/public/images/img-cafetera-moulinex.jpg " aling="center " width="50% ">
-                <br/>
-                <p>$6.770</p>
-                <p>40% OFF </p>
-                <p><strong>Cafetera Moulinex</strong></p>
-            </article>
+            </section>
+            <section>
+                <h2> <strong>Ofertas</strong></h2>
+                <article id="Cafetera">
+                    <img src="/public/images/img-cafetera-moulinex.jpg " aling="center " width="50% ">
+                    <br/>
+                    <p>$6.770</p>
+                    <p>40% OFF </p>
+                    <p><strong>Cafetera Moulinex</strong></p>
+                </article>
 
-            <article id="MacBook">
-                <img src="/images/img-macbook-pro-2019.jpg " aling="center " width="50% ">
-                <br/>
-                <p>$230.000</p>
-                <p>20% OFF </p>
-                <p><strong>MacBook Pro 2019</strong></p>
-            </article>
-            <article id="Samsung Galaxy">
-                <img src="/images/img-samsung-galaxy-s10.jpg " aling="center " width="50% ">
-                <br/>
-                <p>$70.500</p>
-                <p>10% OFF </p>
-                <p><strong>Samsung Galaxy S10</strong></p>
-            </article>
-            <article id="smartV ">
-                <img src="/images/img-tv-samsung-smart.jpg " aling="center " width="50% ">
-                <br/>
-                <p>$23.200</p>
-                <p>5% OFF </p>
-                <p><strong>SmartTv Samsung 43"</strong></p>
-            </article>
-            <img src="/images/img-home-banner.jpg " alt="buscar productos ">
-        </section>
-    </main>
+                <article id="MacBook">
+                    <img src="/images/img-macbook-pro-2019.jpg " aling="center " width="50% ">
+                    <br/>
+                    <p>$230.000</p>
+                    <p>20% OFF </p>
+                    <p><strong>MacBook Pro 2019</strong></p>
+                </article>
+                <article id="Samsung Galaxy">
+                    <img src="/images/img-samsung-galaxy-s10.jpg " aling="center " width="50% ">
+                    <br/>
+                    <p>$70.500</p>
+                    <p>10% OFF </p>
+                    <p><strong>Samsung Galaxy S10</strong></p>
+                </article>
+                <article id="smartV ">
+                    <img src="/images/img-tv-samsung-smart.jpg " aling="center " width="50% ">
+                    <br/>
+                    <p>$23.200</p>
+                    <p>5% OFF </p>
+                    <p><strong>SmartTv Samsung 43"</strong></p>
+                </article>
+                <img src="/images/img-home-banner.jpg " alt="buscar productos ">
+            </section>
+            </main>
 
-    <footer>
-        <dl>
-            <dt class="parrafo-destacado">Pagá con tarjeta o en efectivo</dt>
-            <dd>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</dd>
-            <br/>
-            <dt class="parrafo-destacado">Envío gratis desde $ 2.500</dt>
-            <dd>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</dd>
-            <br/>
-            <dt class="parrafo-destacado"> Seguridad, de principio a fin</dt>
-            <dd>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</dd>
-            <dt>Copyright © 1999-2020 MercadoLiebre S.R.L</dt>
-        </dl>
+            <footer>
+                <dl>
+                    <dt class="parrafo-destacado">Pagá con tarjeta o en efectivo</dt>
+                    <dd>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</dd>
+                    <br/>
+                    <dt class="parrafo-destacado">Envío gratis desde $ 2.500</dt>
+                    <dd>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</dd>
+                    <br/>
+                    <dt class="parrafo-destacado"> Seguridad, de principio a fin</dt>
+                    <dd>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</dd>
+                    <dt>Copyright © 1999-2020 MercadoLiebre S.R.L</dt>
+                </dl>
 
-    </footer>
+            </footer>
 
 </body>
 
