--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,12 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 body {
     background-color: yellow;
-    font-family: sans-serif;
+    font-family: Roboto;
 }
 
 .parrafo-destacado {
