--- a/views/home.html
+++ b/views/home.html
@@ -1,182 +1,134 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Bienvenidos a Mercado Liebre</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercado Liebre</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css " rel=" stylesheet " />
-    <link rel=" stylesheet " href="/css/libreriacssnormalize.css ">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header>
-        <section>
-            <img src="/images/logo-mercado-liebre.svg " alt="Logo " aling="center " border="1px solid yellow " width="48% ">
-            <br>
-            <input type="texth" placeholder=" Buscar  productos, marcas">
-            <div class="conten-search ">
-                <div class="conten-table ">
-                    <table></table>
-                    <br> <br/> Comprá en cuotas y sin tarjeta de crédito</h2>
-                    <br/>
-        </section>
-        <ul aling="center ">
-            <li><a href="# ">Ofertas</a></li>
-            <li><a href="# ">Tiendas Oficiales</a></li>
-            <li><a href="# ">Vender</a></li>
-            <li><a href="# ">Ayuda</a></li>
-            <br/>
-            <li><a href="# ">Creá tu cuenta</a></li>
-            <li><a href="# ">Ingresá</a></li>
-            <li><a href="# ">Mis compras</a></li>
-        </ul>
+        <div class="top-header">
+            <div class="logo">
+                <img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
+            </div>
+            <div class="form" action="#" method="GET">
+                <div class="input">Buscar productos, marcas y más</div>
+                <div class="submit"><i class="fa fa-search"></i></div>
+            </div>
+            <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
         </div>
+        <nav>
+            <ul>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Tiendas Oficiales</a></li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="#">Ayuda</a></li>
+            </ul>
+            <ul>
+                <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+            </ul>
+        </nav>
+        <div class="burger-menu">
+            <i class="fa fa-bars burger"></i>
         </div>
-        <!--Formulario -->
-        <form action="" method="post
-            <div class=" container "> 
-                <div class="container2 ">  
-                <section>
-                 <h5 class="registro ">Creá tu cuenta</h5>
-                </br>
-            </br>
-                 <label for="nombre ">Nombre y Apellido </label>
-                </br>
-            </br>
-                 <input class="datosingresados " type="text " name="Nombre " placeholder="Nombre y Apellido " >
-                </br>
-            </br>
-            <label for="nombre ">Nombre de usuario </label>
-        </br>
-    </br>      
-            <input class="datosingresados " type="text " name="Nombre " placeholder="Nombre de usuario " >
-                </br>
-            </br>
-                  <label>Fecha de nacimiento</label>
-               <select name="mes ">
-          <option value="1 ">Enero</option>
-          <option value="2 ">Febrero</option>
-          <option value="3 ">Marzo</option>
-          <option value="4 ">Abril</option>
-          <option value="5 ">Mayo</option>
-          <option value="6 ">Junio</option>
-           <option value="7 ">Julio</option>
-          <option value="8 ">Agosto</option>
-          <option value="9 ">Septiembre</option>
-          <option value="10 ">Octubre</option>
-           <option value="11 ">Noviembre</option>
-          <option value="12 ">Diciembre</option>
-          </select>
-        </br>
-        </br>
-        <label for="nombre ">Domicilio </label>
-    </br>
-</br>
-          <input class="datosingresados " type="text " name="Nombre " placeholder="Domicilio " >
-                 <h4>Perfil del usuario</h4>
-                 <label> Perfil del usuario </label>
-       <input type="radio " name="usuario " value= Comprar>
-          <input type="radio " name="usuario " value= Vender>                
-                 
-                <section class="login ">
-                    <h5>Ingresá</h5> 
-                     <input class="datosingresados " type="text " name="email " placeholder="Email " >
-                     <input class="datosingresados " type="text " name="contraseña " placeholder="Contraseña ">
-                     <input class="boton " type="submit " name=" " value="Ingresar ">
-                     <p><a href="# ">Olvide mi contraseña</a> </p>
-                   </section>
-            </form>
-    
     </header>
+    <section class="banner">
+        <img src="images/img-home-banner.jpg" alt="Banner de ofertas">
+    </section>
     <main>
-        <section>
-            <h2> <strong>Basado en tu última visita</strong></h2>
-            <article id="Cafetera ">
-                <img src="/images/img-cafetera-moulinex.jpg " aling="center " width="50% ">
-                <br/>
-                <p>$6.770</p>
-                <p>40% OFF </p>
-                <p><strong>Cafetera Moulinex</strong></p>
-            </article>
-
-            <article id="MacBook ">
-                <img src="/images/img-macbook-pro-2019.jpg " aling="center " width="50% ">
-                <br/>
-                <p>$230.000</p>
-                <p>20% OFF </p>
-                <p><strong>MacBook Pro 2019</strong></p>
-            </article>
-            <article id="Samsung Galaxy ">
-                <img src="/images/img-samsung-galaxy-s10.jpg " aling="center " width="50% ">
-                <br/>
-                <p>$70.500</p>
-                <p>10% OFF </p>
-                <p><strong>Samsung Galaxy S10</strong></p>
-            </article>
-            <article id="smartV ">
-                <img src="/images/img-tv-samsung-smart.jpg " aling="center " width="50% " height="10% ">
-                <br/>
-                <p>$23.200</p>
-                <p>5% OFF </p>
-                <p><strong>SmartTv Samsung 43"</strong>
-            </p>
-            </article>
-            </section>
-            <section>
-                <h2> <strong>Ofertas</strong></h2>
-                <article id="Cafetera">
-                    <img src="/public/images/img-cafetera-moulinex.jpg " aling="center " width="50% ">
-                    <br/>
-                    <p>$6.770</p>
-                    <p>40% OFF </p>
-                    <p><strong>Cafetera Moulinex</strong></p>
+        <section class="last-visit">
+            <h3>Basado en tu última visita</h3>
+            <div class="products">
+                <article>
+                    <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$6.770</p>
+                        <p class="discount">40% off</p>
+                        <h4 class="description">Cafetera Moulinex</h4>
+                    </div>
                 </article>
-
-                <article id="MacBook">
-                    <img src="/images/img-macbook-pro-2019.jpg " aling="center " width="50% ">
-                    <br/>
-                    <p>$230.000</p>
-                    <p>20% OFF </p>
-                    <p><strong>MacBook Pro 2019</strong></p>
+                <article>
+                    <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$230.000</p>
+                        <p class="discount">20% off</p>
+                        <h4 class="description">MacBook Pro 2019</h4>
+                    </div>
                 </article>
-                <article id="Samsung Galaxy">
-                    <img src="/images/img-samsung-galaxy-s10.jpg " aling="center " width="50% ">
-                    <br/>
-                    <p>$70.500</p>
-                    <p>10% OFF </p>
-                    <p><strong>Samsung Galaxy S10</strong></p>
+                <article>
+                    <img src="images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$70.500</p>
+                        <p class="discount">10% off</p>
+                        <h4 class="description">Samsung Galaxy S10</h4>
+                    </div>
                 </article>
-                <article id="smartV ">
-                    <img src="/images/img-tv-samsung-smart.jpg " aling="center " width="50% ">
-                    <br/>
-                    <p>$23.200</p>
-                    <p>5% OFF </p>
-                    <p><strong>SmartTv Samsung 43"</strong></p>
+                <article>
+                    <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$23.200</p>
+                        <p class="discount">5% off</p>
+                        <h4 class="description">SmartTv Samsung 43"</h4>
+                    </div>
                 </article>
-                <img src="/images/img-home-banner.jpg " alt="buscar productos ">
-            </section>
-            </main>
+            </div>
+        </section>
+        <section class="offers">
+            <h3>Ofertas</h3>
+            <div class="products">
+                <article>
+                    <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$6.770</p>
+                        <p class="discount">40% off</p>
+                        <h4 class="description">Cafetera Moulinex</h4>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$230.000</p>
+                        <p class="discount">20% off</p>
+                        <h4 class="description">MacBook Pro 2019</h4>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$70.500</p>
+                        <p class="discount">10% off</p>
+                        <h4 class="description">Samsung Galaxy S10</h4>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$23.200</p>
+                        <p class="discount">5% off</p>
+                        <h4 class="description">SmartTv Samsung 43"</h4>
+                    </div>
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer>
 
-            <footer>
-                <dl>
-                    <dt class="parrafo-destacado">Pagá con tarjeta o en efectivo</dt>
-                    <dd>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</dd>
-                    <br/>
-                    <dt class="parrafo-destacado">Envío gratis desde $ 2.500</dt>
-                    <dd>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</dd>
-                    <br/>
-                    <dt class="parrafo-destacado"> Seguridad, de principio a fin</dt>
-                    <dd>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</dd>
-                    <dt>Copyright © 1999-2020 MercadoLiebre S.R.L</dt>
-                </dl>
-
-            </footer>
+    </footer>
 
 </body>
 
