--- a/views/register.html
+++ b/views/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenidos a MELI</title>
+    <title>Mercado Liebre</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
@@ -69,11 +69,11 @@
             <div>
                 <label class="categorias ">Categorias de Interés:
                     <div>
-                    <label> <input type="checkbox " name="interes " value="elec ">Electro</label>
-	                <label> <input type="checkbox " name="interes " value="moda ">Moda</label>
-	                <label> <input type="checkbox " name="interes " value="hogar ">Hogar</label>
-	                <label> <input type="checkbox " name="interes " value="juguet ">Jugueteria</label>
-	                <label> <input type="checkbox " name="interes " value="vidaSana ">Vida Sana</label>
+                    <label> <input type="checkbox " name="interes " value="Electro ">Electro</label>
+	                <label> <input type="checkbox " name="interes " value="Moda ">Moda</label>
+	                <label> <input type="checkbox " name="interes " value="Hogar ">Hogar</label>
+	                <label> <input type="checkbox " name="interes " value="Juguetería ">Jugueteria</label>
+	                <label> <input type="checkbox " name="interes " value="Vida Sana ">Vida Sana</label>
                 </div>
                 </label>
                 <div>
