--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenidos a MELI</title>
+    <title>Mercado Liebre</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
@@ -52,7 +52,7 @@
     </div>
     <div>
         <label>Password</label>
-        <input type="password " name="password " id="password " placeholder="Aca por favor tu password! ">
+        <input type="password " name="password " id="password " placeholder="Ingresá tu password ">
     </div>
     <div>
         <button type="login " value="Ingresar y volver al Home "><a href="/ ">Guardar y volver al Home</a></button>
